hub-router/kustomize/hub-router/overlays/local/router-ws/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-api
  labels:
    app: router
    component: hub-router
    group: core
spec:
  tls:
  - hosts:
      - ROUTER_API_SERVICE_NAME.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: ROUTER_API_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ROUTER_API_SERVICE_NAME
            port:
              name: http
